--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,52 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="104"
+    android:viewportHeight="84">
+  <group android:scaleX="0.39"
+      android:scaleY="0.315"
+      android:translateX="31.72"
+      android:translateY="28.77">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M0,4.87C0,2.66 1.79,0.87 4,0.87H44.12C46.33,0.87 48.12,2.66 48.12,4.87V16.39H4C1.79,16.39 0,14.6 0,12.39V4.87Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M48.9,17.16H59.42C62.18,17.16 64.42,19.4 64.42,22.16V28.46C64.42,31.22 62.18,33.46 59.42,33.46H48.9V17.16Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M16.3,39.24C16.3,36.48 18.54,34.24 21.3,34.24H48.12V44.76C48.12,47.52 45.88,49.76 43.12,49.76H16.3V39.24Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M0,55.54C0,52.78 2.24,50.54 5,50.54H15.52V66.06H5C2.24,66.06 0,63.82 0,61.06V55.54Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M16.3,66.84H59.42C62.18,66.84 64.42,69.07 64.42,71.84V78.13C64.42,80.9 62.18,83.13 59.42,83.13H21.3C18.54,83.13 16.3,80.9 16.3,78.13V66.84Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M72.18,5.87C72.18,3.1 74.42,0.87 77.18,0.87H82.7C85.46,0.87 87.7,3.1 87.7,5.87V16.39H77.18C74.42,16.39 72.18,14.15 72.18,11.39V5.87Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M88.48,17.16H99C101.76,17.16 104,19.4 104,22.16V78.13C104,80.9 101.76,83.13 99,83.13H93.48C90.72,83.13 88.48,80.9 88.48,78.13V17.16Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M79.94,8.63H87.7V12.16C87.7,14.93 89.94,17.16 92.7,17.16H96.24V24.15H88.48V21.39C88.48,18.63 86.24,16.39 83.48,16.39H79.94V8.63Z"
+        android:fillColor="#ffffff"
+        android:fillType="evenOdd"/>
+    <path
+        android:pathData="M40.36,8.63H48.12V12.16C48.12,14.93 50.36,17.16 53.12,17.16H56.66V24.15H48.9V21.39C48.9,18.63 46.66,16.39 43.9,16.39H40.36V8.63Z"
+        android:fillColor="#ffffff"
+        android:fillType="evenOdd"/>
+    <path
+        android:pathData="M7.76,58.3H15.52V61.84C15.52,64.6 17.76,66.84 20.52,66.84H24.06V73.82H16.3V71.06C16.3,68.3 14.06,66.06 11.3,66.06H7.76V58.3Z"
+        android:fillColor="#ffffff"
+        android:fillType="evenOdd"/>
+    <path
+        android:pathData="M56.66,25.7L56.66,33.46L53.12,33.46C50.36,33.46 48.12,35.7 48.12,38.46L48.12,42L41.13,42L41.13,34.24L43.9,34.24C46.66,34.24 48.9,32 48.9,29.24L48.9,25.7L56.66,25.7Z"
+        android:fillColor="#ffffff"
+        android:fillType="evenOdd"/>
+    <path
+        android:pathData="M24.06,42L24.06,49.76L20.52,49.76C17.76,49.76 15.52,52 15.52,54.76L15.52,58.3L8.54,58.3L8.54,50.54L11.3,50.54C14.06,50.54 16.3,48.3 16.3,45.54L16.3,42L24.06,42Z"
+        android:fillColor="#ffffff"
+        android:fillType="evenOdd"/>
+  </group>
 </vector>
